fixed: nav bar spacing

--- a/flex.css
+++ b/flex.css
@@ -1,17 +1,43 @@
 body  {
   background-color: #27445C;
 }
-
+.logo {
+  width: 50px;
+  height: 50px;
+  padding: 10px;
+}
 .flex-container {
 
 }
 
 .nav_bar {
-  display: inline-flex;
+  display: flex;
+  justify-content: space-between;
+  gap: 10;
+  align-items: center;
+  box-shadow: 0px 10px 10px rgba(0,0,0,0.1);
 }
+
+.intro-format {
+  width: 50%;
+}
+
 
 .nav_bar > button {
   color: white;
+}
+
+.introduction {
+  color: white;
+  display: flex;
+} 
+.nav-bar-buttons {
+  display: flex;
+}
+
+.nav-button {
+  padding: 5px;
+  margin: 5px;
 }
 
 .footer {
